# Proyecto-Arqueria

./: .env  .env.example  .gitignore  Ejemplos print rutina.txt  README.md
backend/: .dockerignore  4.1.2  Dockerfile  README.md  pyproject.toml  tmp_fix.py
backend/app/: auth_schema.py  config.py  db.py  deps.py  exercise_rounds.py  main.py  models.py  ownership.py  routine_retention.py  schemas.py  security.py  student_accounts.py  student_retention.py
backend/app/__pycache__/: main.cpython-311.pyc.2543792570160  models.cpython-311.pyc.2543792570160  student_retention.cpython-311.pyc.2543792502384
backend/app/routers/: assignments.py  auth.py  exercises.py  routines.py  students.py  users.py
backend/app/routers/__pycache__/: students.cpython-311.pyc.2543792502384
backend/tests/: test_auth_logout.py
db/: schema.sql  schema_postgres.sql
db/migrations/: 2026-02-13-db-hardening.sql  2026-02-15-allow-zero-arrows-distance.sql
frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  App_utf8.tmp  api.ts  i18n.ts  index.css  main.tsx
frontend/src/context/: AppDataContext.tsx  ProfessorListsContext.tsx  useAppDataController.ts
frontend/src/sections/: AdminDashboardSection.tsx  AdminRoutinesSection.tsx  AssignRoutineModal.tsx  CreateRoutineModal.tsx  ExercisesSection.tsx  HomeSection.tsx  ProfileSection.tsx  RoutinesSection.tsx  StudentsSection.tsx
