[tool.poetry]
name = "archery-training-api"
version = "0.1.0"
description = "API de entrenamientos de tiro con arco"
authors = ["Tu Nombre <tu_email@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
bcrypt = "4.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
